# Strucnode

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  strucnode.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: index.html
